# CORDIC_Rotate_APFX

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake_format_conf.py
.github/docker/: Dockerfile  entrypoint.sh
.github/workflows/: cmake.yml  docker.yml
RomGenerators/: CMakeLists.txt
RomGenerators/sources/: definitions.hpp  main.cpp  main_generator.cpp  main_generator.cpp.in  main_legacy.cpp
RomGenerators/sources/RomGeneratorConst/: RomGeneratorConst.cpp  RomGeneratorConst.hpp
RomGenerators/sources/RomGeneratorMCHalfPi/: RomGeneratorMCHalfPi.cpp  RomGeneratorMCHalfPi.hpp
RomGenerators/sources/RomGeneratorML/: RomGeneratorML.cpp  RomGeneratorML.hpp
RomGenerators/sources/RomRotateCommon/: definitions.hpp
sources/CCordicRotate/: CCordicRotate.cpp  CCordicRotate.hpp
sources/CCordicRotateConstexpr/: CCordicRotateConstexpr.cpp  CCordicRotateConstexpr.hpp
sources/CCordicRotateHalfPiRom/: CCordicRotateHalfPiRom.cpp  CCordicRotateHalfPiRom.hpp
sources/CCordicRotateRom/: CCordicRotateRom.cpp.in  CCordicRotateRom.hpp.in  CCordicRotateRomTemplate.hpp
sources/CCordicRotateSmart/: CCordicRotateSmart.cpp  CCordicRotateSmart.hpp
sources/CordicRoms/: README.md
sources/tb/: cordic_rom_tb.cpp.in  cordic_tb.cpp
sources/tb/catch_less/: cordic_rom_aptypes_tb.cpp.in
sources/tb/catchy/: cordic_rom_tb.cpp.in  cordic_tb.cpp  main_catch2.cpp
